[package]
name = "videoproxy-rs"
version = "0.1.0"
authors = ["suconghou <suconghou@gmail.com>"]
edition = "2021"


[dependencies]
actix-web = "4.0.0-beta.14"
actix-files = "0.6.0-beta.10"
awc = { version = "3.0.0-beta.13", features = [ "rustls" ] }
serde = "1"
serde_json = "1"
lazy_static = "1"
tokio = { version = "1", features = ["sync"] }

[profile.release]
opt-level = "z"
lto = true
