[package]
name = "videoproxy-rs"
version = "0.1.0"
authors = ["suconghou <suconghou@gmail.com>"]
edition = "2021"


[dependencies]
actix-web = "4.2"
actix-files = "0.6"
awc = { version = "3.0", features = [ "rustls" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
lazy_static = "1"
tokio = { version = "1", features = ["sync"] }

[profile.release]
opt-level = "z"
lto = true
