[package]
name = "videoproxy-rs"
version = "0.1.0"
authors = ["suconghou <suconghou@gmail.com>"]
edition = "2024"


[dependencies]
actix-web = "4"
actix-files = "0.6"
awc = { version = "3", features = [ "rustls" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[profile.release]
opt-level = "z"
lto = true
